--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Abra http://localhost:3000 em duas abas diferentes\" && exit 0"
   },
   "keywords": ["battleship", "game", "websockets", "multiplayer"],
